create product/category buttons

--- a/ecom/apps/cart/templates/cart.html
+++ b/ecom/apps/cart/templates/cart.html
@@ -134,7 +134,7 @@
                     </div>
                 </form>
             </div>
-            <p v-else="">Your cart is empty!</p>
+            <p class="has-text-centered" v-else="">Your cart is empty!</p>
             <div v-if="errors.length > 0" class="notification is-danger is-light">Please fill in all the reruired fields!</div>
         </div>
     </div>
